fixed product display on mobile

--- a/_general.scss
+++ b/_general.scss
@@ -58,6 +58,22 @@ h3 {font-size: 1.44em;}
 
 h4 {font-size: 1.2em;}
 
+article {
+
+    img {
+        display: block;
+        max-width: 100%;
+        height: auto;
+    }
+
+    table {
+        display: block;
+        overflow-x: auto;
+        
+    }
+
+}
+
 small, .font_small {font-size: 0.833em;}
 
 .mb-s {
