--- a/style.css
+++ b/style.css
@@ -110,6 +110,14 @@ h3 {
 h4 {
   font-size: 1.2em; }
 
+article img {
+  display: block;
+  max-width: 100%;
+  height: auto; }
+article table {
+  display: block;
+  overflow-x: auto; }
+
 small, .font_small {
   font-size: 0.833em; }
 
